<resources>
    <string name="app_name">Dishdash</string>
    <string name="welcome_text">Selamat Datang</string>
    <string name="fill_welcome_text">Apakah Anda saat ini sedang bingung mau makan apa? Dish Dash dapat membantu Anda untuk menemukan apa yang Anda butuhkan untuk mencari referensi makanan enak khas cita rasa Indonesia.</string>
    <string name="login_text">Masuk</string>
    <string name="register_text">Daftar</string>
    <string name="error_password">Password kurang dari 8</string>
    <string name="email_text">Email</string>
    <string name="password_text">password</string>
    <string name="text_forgot_password">Lupa Password?</string>
    <string name="text_login_with">Atau masuk dengan</string>
    <string name="text_bottom">Belum punya akun?</string>
    <string name="username">Username</string>
    <string name="snk">Saya sudah membaca dan menyetujui syarat dan ketentuan</string>
    <string name="your_name">Hallo, Siapa nama kamu?</string>
    <string name="fill_name">Nama Lengkap</string>
    <string name="text_next">Next</string>
    <string name="text_date">Tanggal lahir?</string>
    <string name="text_height">Tinggi kamu berapa?</string>
    <string name="text_cm">cm</string>
    <string name="hours_sleep">Kamu tidur berapa jam?</string>
    <string name="type_work">Jenis Pekerjaaan kamu?</string>
    <string name="hours_work_per_day">Jam per hari</string>
    <string name="most_active_text">Seberapa aktif kegiatan kamu saat senggang?</string>
    <string name="status_active">Sangat Aktif\nSaya sering melakukan pergerakan</string>
    <string name="status_normal">Cukup Aktif\nSaya melakukan pergerakan yang cukup</string>
    <string name="status_not_active">Tidak Aktif\nSaya sering kali duduk</string>
    <string name="text_weight_target">Target berat badan kamu berapa?</string>
    <string name="text_now">Sekarang</string>
    <string name="text_target">Target</string>
    <string name="text_nutrition_plane">Perencanaan Nutrisi</string>
    <string name="text_done">Done</string>
    <string name="title_activity_custom_circular_progress_indicator">
        CustomCircularProgressIndicator
    </string>
    <string name="day">Senin</string>
    <string name="textYourHave">Kamu masih bisa konsumsi</string>
    <string name="text_nol">0</string>
    <string name="text_calori_was_consume">Kalori telah dikonsumsi</string>
    <string name="text_calori">Kalori</string>
    <string name="text_question_eat">Kamu sudah makan apa aja hari ini?</string>
    <string name="text_food_record">Catat Makanan</string>
    <string name="text_offering_location">Mau rekomendasi tempat makan dengan perhitungan kalori?</string>
    <string name="text_search_restaurant">Cari Restaurant</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_contactinfo">Contact informartion</string>
    <string name="text_description">Description</string>
    <string name="fill_emailfeed">Nomor telepon atau alamat email</string>
    <string name="fill_descripsifeed">Deskripsi harus memiliki setidaknya 10 karakter. \nTambahkan tangkapan layar jika memungkinkan</string>
    <string name="submit_text">Submit</string>
    <string name="nama_makanan_text">Nasi Goreng</string>
    <string name="iv_makanan">Photo Makanan</string>
    <string name="carbo">CARBO</string>
    <string name="protein">PROTEIN\n</string>
    <string name="fat">FAT\n</string>
    <string name="text_catat_makan">CATAT MAKANAN</string>
    <string name="search_hint">Nasi Goreng</string>
    <string name="simpan_text">SIMPAN</string>
    <string name="text_setting">Settings</string>
    <string name="text_account">Account</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="edit_text">Masukkan nama Anda dan tambahkan foto profil opsional</string>
    <string name="edit_image_text">Edit</string>
    <string name="tv_nama_user">afif</string>
    <string name="tv_nomor_telepon">Nomor Telepon</string>
    <string name="nomor_telepon">+6282981012412</string>
    <string name="tv_alamat_email">Alamat Email</string>
    <string name="user_mail">Afifraihan59@gmail.com</string>
    <string name="tv_current_password">Current Password</string>
    <string name="current_password">Masukkan kata sandi saat ini</string>
    <string name="tv_new_password">New Password</string>
    <string name="new_password">Masukkan kata sandi baru</string>
    <string name="tv_confirm_password">Confirm Password</string>
    <string name="cancel_text">Cancel</string>
    <string name="done_text">DONE</string>
    <string name="cari_resto">Cari restaurant, makananan, minuman</string>
    <string name="alamat">Jl.Pemuda,Sekayu,Kota Semarang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kalori">Kalori :</string>
    <string name="total_kalori">0</string>
    <string name="kota_malang">Malang</string>
    <string name="text_day">Senin</string>
    <string name="text_recomendation">Rekomendasi Makanan :</string>
    <string name="text_read_more">Read More</string>
    <string name="text_today">Hari Ini :</string>
    <string name="text_input_date">Masukan Tanggal</string>
    <string name="text_history">History</string>
    <string name="text_open_map">Open Map</string>


</resources>