<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeActivity.FeedbackActivity">

    <TextView
        android:id="@+id/feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_feedback"
        android:textColor="@color/grey_navy"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_rectangle_white_2"
        android:contentDescription="@string/text_done"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/text_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/text_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/text_contactinfo"
        android:textColor="@color/grey_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_email_feed"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/fill_emailfeed"
        android:textColorHint="@color/grey_navy"
        android:textSize="13sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_contact" />

    <TextView
        android:id="@+id/text_descripton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/text_description"
        android:textColor="@color/grey_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_descriptionfeed"
        android:layout_width="350dp"
        android:layout_height="148dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/fill_descripsifeed"
        android:textColorHint="@color/grey_navy"
        android:textSize="13sp"
        android:inputType="text"
        android:gravity="top"
        android:lines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_descripton" />

    <ImageButton
        android:id="@+id/btn_plus"
        android:layout_width="74dp"
        android:layout_height="69dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/custom_edit_text"
        android:src="@drawable/custom_plus"
        android:text="@string/text_next"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_descriptionfeed"
        app:layout_constraintVertical_bias="0.296" />

    <CheckBox
        android:id="@+id/checkbox_snk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/snk"
        android:textColor="@color/grey_navy"
        app:layout_constraintStart_toStartOf="@id/btn_plus"
        app:layout_constraintTop_toBottomOf="@id/btn_plus" />/

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/grey_navy"
        android:text="@string/submit_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
