<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Setting.EditProfileActivity">

    <TextView
        android:id="@+id/edit_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_edit_profile"
        android:textColor="@color/grey_navy"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_rectangle_white_2"
        android:contentDescription="@string/text_done"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="354dp"
        android:layout_height="183dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edit_text"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_text">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/d_image"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circularImageViewStyle"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="233dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:text="@string/edit_text"
            android:textColor="@color/grey_navy"
            android:textSize="13sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="8dp"
            android:text="@string/edit_image_text"
            android:textColor="@color/black_grey"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/edit_change_name"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_change_name"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_edit_text"
            android:inputType="text"
            android:text="@string/tv_nama_user"
            android:textColor="@color/grey_navy"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintVertical_bias="0.953" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_edit_nomor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:text="@string/tv_nomor_telepon"
        android:textColor="@color/grey_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email_feed"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:text="@string/nomor_telepon"
        android:textColor="@color/grey_navy"
        android:textSize="13sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_nomor" />

    <TextView
        android:id="@+id/text_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="412dp"
        android:text="@string/tv_alamat_email"
        android:textColor="@color/grey_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_alamat_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:text="@string/user_mail"
        android:textColor="@color/grey_navy"
        android:textSize="13sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_alamat" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/grey_navy"
        android:text="@string/submit_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>