<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeActivity.NameActivity">

    <TextView
        android:id="@+id/text_your_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/navy_strong"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:hint="@string/fill_name"
        android:gravity="center"
        android:textColorHint="@color/navy_strong"
        android:backgroundTint="@color/navy_light"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/text_your_names"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btn_next"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/text_next"
        android:textSize="18sp"
        android:backgroundTint="@color/navy_strong"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>